Adding images and homework 1 solution

--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me</title>
-    <link rel="stylesheet" type="text/css" href="assests/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assests/css/style.css">
-    <link rel="shortcut icon" href="assests/images/Josh.png">
-  </head>
-  <body>
+<!doctype html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>About | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assests/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="assests/css/style.css">
+</head>
+<body>
+  <header id="masthead">
     <div class="container">
-      <div class="row">
-        <section class="column two-thirds-md one-sm one-xs">
-
-        </section>
-      </div>
-      <div class="row">
-        <aside class="half one-third-md one-sm one-xs">
-
-        </aside>
-      </div>
+      <a href="index.html" id="logo">Josh Loftis</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-  </body>
+  </header>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+      <img class="profile-image "src="assests/images/profile.jpg" class="auth-image" alt="Josh Loftis" width="300" align="left">
+      <p>My name is Josh Loftis. I'm from a small town in North GA. My B.A. is in Philosophy, and up until a year or so ago I had literally zero interest in learning to code or even considering coding as a career path. In fact, I openly shunned the idea. Recently, though, after playing with basic coding things, I was excited to build and design websites. I found a deep passion in spending a lot of time designing a website or experience, and then trying to build it out.</p>
+      <p>Since starting at Calendly, though, and working closely with the developers there, I've refocused my interest in learning to code because I see first hand the really interesting problems they get to work on and how much they enjoy their job. Before joining Calendly, I fooled around for a couple of years, here and there, with learning HTML, css, and some JavaScript and jQuery, but never really took it beyond the beginning steps. I'm really excited to take it beyond the beginning steps and become a full stack developer.</p>
+    </section>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+        <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
+</body>
 </html>
