--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Josh Loftis</a>
-      <nav>
+      <a class="twelve-xs" href="index.html" id="logo">Josh Loftis</a>
+      <nav class="twelve-xs">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -18,13 +18,13 @@
     </div>
   </header>
   <div id="main-container" class="container">
-    <section class="main-section">
+    <section class="main-section eight-lg eight-md twelve-sm twelve-xs">
       <h1>About Me</h1>
-      <img class="profile-image "src="assests/images/profile.jpg" class="auth-image" alt="Josh Loftis" width="300" align="left">
+      <img class="profile-image twelve-lg twelve-md four-sm twelve-xs" src="assests/images/profile.jpg" class="auth-image" alt="Josh Loftis" width="300" align="left">
       <p>My name is Josh Loftis. I'm from a small town in North GA. My B.A. is in Philosophy, and up until a year or so ago I had literally zero interest in learning to code or even considering coding as a career path. In fact, I openly shunned the idea. Recently, though, after playing with basic coding things, I was excited to build and design websites. I found a deep passion in spending a lot of time designing a website or experience, and then trying to build it out.</p>
       <p>Since starting at Calendly, though, and working closely with the developers there, I've refocused my interest in learning to code because I see first hand the really interesting problems they get to work on and how much they enjoy their job. Before joining Calendly, I fooled around for a couple of years, here and there, with learning HTML, css, and some JavaScript and jQuery, but never really took it beyond the beginning steps. I'm really excited to take it beyond the beginning steps and become a full stack developer.</p>
     </section>
-    <section class="sidebar">
+    <section class="sidebar four-lg four-md twelve-sm twelve-xs">
       <div id="connect">
         <h2>Connect with Me</h2>
         <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
