Finished styles and contact.html and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,27 @@
     <div class="row">
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
         <section class="main-section">
-          <h1>About Me</h1>
-          <img class="profile-image col-twelve-lg col-twelve-md col-four-sm col-twelve-xs" src="assests/images/profile.jpg" class="auth-image" alt="Josh Loftis" width="300" align="left">
-          <p>My name is Josh Loftis. I'm from a small town in North GA. My B.A. is in Philosophy, and up until a year or so ago I had literally zero interest in learning to code or even considering coding as a career path. In fact, I openly shunned the idea. Recently, though, after playing with basic coding things, I was excited to build and design websites. I found a deep passion in spending a lot of time designing a website or experience, and then trying to build it out.</p>
-          <p>Since starting at Calendly, though, and working closely with the developers there, I've refocused my interest in learning to code because I see first hand the really interesting problems they get to work on and how much they enjoy their job. Before joining Calendly, I fooled around for a couple of years, here and there, with learning HTML, css, and some JavaScript and jQuery, but never really took it beyond the beginning steps. I'm really excited to take it beyond the beginning steps and become a full stack developer.</p>
+          <h1>Portfolio</h1>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+            <h3>Hangman</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+            <h3>RPG Game</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+            <h3>Trivia Game</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+            <h3>Rutgers Info Widget</h3>
+          </div>
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+            <h3>Rock Paper Scissors</h3>
+          </div>
         </section>
       </div>
       <div class="col-four-lg col-four-md col-twelve-sm col-twelve-xs">
