--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,24 @@
     <div class="row">
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
         <section class="main-section">
-          <h1>About Me</h1>
-          <img class="profile-image col-twelve-lg col-twelve-md col-four-sm col-twelve-xs" src="assests/images/profile.jpg" class="auth-image" alt="Josh Loftis" width="300" align="left">
-          <p>My name is Josh Loftis. I'm from a small town in North GA. My B.A. is in Philosophy, and up until a year or so ago I had literally zero interest in learning to code or even considering coding as a career path. In fact, I openly shunned the idea. Recently, though, after playing with basic coding things, I was excited to build and design websites. I found a deep passion in spending a lot of time designing a website or experience, and then trying to build it out.</p>
-          <p>Since starting at Calendly, though, and working closely with the developers there, I've refocused my interest in learning to code because I see first hand the really interesting problems they get to work on and how much they enjoy their job. Before joining Calendly, I fooled around for a couple of years, here and there, with learning HTML, css, and some JavaScript and jQuery, but never really took it beyond the beginning steps. I'm really excited to take it beyond the beginning steps and become a full stack developer.</p>
+          <h1>Contact</h1>
+          <form id="contact-form">
+            <ul>
+              <li>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+              </li>
+              <li>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+              </li>
+              <li>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required="required"></textarea>
+              </li>
+            </ul>
+            <input type="submit">
+          </form>
         </section>
       </div>
       <div class="col-four-lg col-four-md col-twelve-sm col-twelve-xs">
