Bug fixes and adding images

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
@@ -29,22 +29,14 @@
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
         <section class="main-section">
           <h1>Contact</h1>
-          <form id="contact-form">
-            <ul>
-              <li>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-              </li>
-              <li>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-              </li>
-              <li>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required="required"></textarea>
-              </li>
-            </ul>
-            <input type="submit">
+          <form>
+            <label for="name">Name</label><br>
+            <input type="text" id="name" placeholder="John Smith"><br>
+            <label for="email">Email</label><br>
+            <input type="text" id="email" placeholder="example@email.com"><br>
+            <label for="message">Message</label><br>
+            <textarea rows="10" id="message"></textarea><br><br>
+            <input class="hover" type="submit" value="Submit">
           </form>
         </section>
       </div>
