--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
@@ -27,27 +27,44 @@
   <div id="main-container" class="container">
     <div class="row">
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
-        <section class="main-section">
-          <h1>Portfolio</h1>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-            <h3>Hangman</h3>
+        <section>
+          <h2>Portfolio</h2>
+          <hr>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+              <figure>
+                <img class="img-responsive" width="708" src="assests/images/ipad-face.jpg" alt="Image of person holding an iPad">
+                <figcaption><h3>Hangman</h3></figcaption>
+              </figure>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+              <figure>
+                <img class="img-responsive" width="708" src="assests/images/spin-board.jpg" alt="Image of a spin board">
+                <figcaption><h3>RPG Game</h3></figcaption>
+              </figure>
+            </div>
           </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-            <h3>RPG Game</h3>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+              <figure>
+                <img class="img-responsive" width="708" src="assests/images/headphones.jpg" alt="Image of headphones">
+                <figcaption><h3>Trivia Game</h3></figcaption>
+              </figure>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+              <figure>
+                <img class="img-responsive" width="708" src="assests/images/iphone.jpg" alt="Image of iPhone with headphones">
+                <figcaption><h3>Rutgers Info Widget</h3></figcaption>
+              </figure>
+            </div>
           </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-            <h3>Trivia Game</h3>
-          </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-            <h3>Rutgers Info Widget</h3>
-          </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-            <h3>Rock Paper Scissors</h3>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+              <figure>
+                <img class="img-responsive" width="708" src="assests/images/led-tv.jpg" alt="Image of LED TV">
+                <figcaption><h3>Rock Paper Scissors</h3></figcaption>
+              </figure>
+            </div>
           </div>
         </section>
       </div>
