Bug fixes, completing grid, and adding comments

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 <body>
+  <!--nav bar start-->
   <header id="masthead">
     <div class="container">
       <div class="row">
@@ -24,8 +25,11 @@
       </div>
     </div>
   </header>
+  <!--nav bar end-->
+  <!--Main content section start-->
   <div id="main-container" class="container">
     <div class="row">
+      <!--Main content section start-->
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
         <section class="main-section">
           <h1>Contact</h1>
@@ -35,23 +39,34 @@
             <label for="email">Email</label><br>
             <input type="text" id="email" placeholder="example@email.com"><br>
             <label for="message">Message</label><br>
-            <textarea rows="10" id="message"></textarea><br><br>
+            <textarea rows="10" id="message"></textarea><br>
             <input class="hover" type="submit" value="Submit">
           </form>
         </section>
       </div>
+      <!--Main section end-->
+      <!--Side bar start-->
       <div class="col-four-lg col-four-md col-twelve-sm col-twelve-xs">
         <section class="sidebar">
           <div id="connect">
             <h2>Connect with Me</h2>
-            <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
-            <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+              <div class="row">
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+                </div>
+            </div>
           </div>
         </section>
       </div>
-    </div>
-  </div>
+      <!-- Side bar end-->
+    </div> <!--end of main content row-->
+  </div> <!--end of main container with content-->
   <footer>
     <div class="container">
       Copyright &copy; 2017 Josh Loftis
