--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 <body>
+  <!--Nav bar start-->
   <header id="masthead">
     <div class="container">
       <div class="row">
@@ -24,8 +25,11 @@
       </div>
     </div>
   </header>
+  <!--Nav bar end-->
+  <!--Main content section start-->
   <div id="main-container" class="container">
     <div class="row">
+      <!--Main content section start-->
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
         <section class="main-section">
           <h1>About Me</h1>
@@ -34,18 +38,29 @@
           <p>Since starting at Calendly, though, and working closely with the developers there, I've refocused my interest in learning to code because I see first hand the really interesting problems they get to work on and how much they enjoy their job. Before joining Calendly, I fooled around for a couple of years, here and there, with learning HTML, css, and some JavaScript and jQuery, but never really took it beyond the beginning steps. I'm really excited to take it beyond the beginning steps and become a full stack developer.</p>
         </section>
       </div>
+      <!--Main section end-->
+      <!--Side bar start-->
       <div class="col-four-lg col-four-md col-twelve-sm col-twelve-xs">
         <section class="sidebar">
           <div id="connect">
             <h2>Connect with Me</h2>
-            <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
-            <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+              <div class="row">
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+                </div>
+            </div>
           </div>
         </section>
       </div>
-    </div>
-  </div>
+      <!-- Side bar end-->
+    </div> <!--end of main content row-->
+  </div> <!--end of main container with content-->
   <footer>
     <div class="container">
       Copyright &copy; 2017 Josh Loftis
