--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
 <body>
+  <!--nav bar start-->
   <header id="masthead">
     <div class="container">
       <div class="row">
@@ -24,62 +25,76 @@
       </div>
     </div>
   </header>
+  <!--nav bar end-->
+  <!--Main content section start-->
   <div id="main-container" class="container">
     <div class="row">
+      <!--Main content section start-->
       <div class="col-eight-lg col-eight-md col-twelve-sm col-twelve-xs">
-        <section>
+        <section class="main-section">
           <h2>Portfolio</h2>
           <hr>
           <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+            <div class="col-twelve-lg col-twelve-md col-six-sm col-twelve-xs">
               <figure>
-                <img class="img-responsive" width="708" src="assests/images/ipad-face.jpg" alt="Image of person holding an iPad">
+                <img class="responsive-img" src="assests/images/ipad-face.jpg" alt="Image of person holding an iPad">
                 <figcaption><h3>Hangman</h3></figcaption>
               </figure>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+            <div class="col-twelve-lg col-twelve-md col-six-sm col-twelve-xs">
               <figure>
-                <img class="img-responsive" width="708" src="assests/images/spin-board.jpg" alt="Image of a spin board">
+                <img class="responsive-img" src="assests/images/spin-board.jpg" alt="Image of a spin board">
                 <figcaption><h3>RPG Game</h3></figcaption>
               </figure>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+            <div class="col-twelve-lg col-twelve-md col-six-sm col-twelve-xs">
               <figure>
-                <img class="img-responsive" width="708" src="assests/images/headphones.jpg" alt="Image of headphones">
+                <img class="responsive-img" src="assests/images/headphones.jpg" alt="Image of headphones">
                 <figcaption><h3>Trivia Game</h3></figcaption>
               </figure>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+            <div class="col-twelve-lg col-twelve-md col-six-sm col-twelve-xs">
               <figure>
-                <img class="img-responsive" width="708" src="assests/images/iphone.jpg" alt="Image of iPhone with headphones">
+                <img class="responsive-img" src="assests/images/iphone.jpg" alt="Image of iPhone with headphones">
                 <figcaption><h3>Rutgers Info Widget</h3></figcaption>
               </figure>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12">
+            <div class="col-twelve-lg col-twelve-md col-six-sm col-twelve-xs">
               <figure>
-                <img class="img-responsive" width="708" src="assests/images/led-tv.jpg" alt="Image of LED TV">
+                <img class="responsive-img" src="assests/images/led-tv.jpg" alt="Image of LED TV">
                 <figcaption><h3>Rock Paper Scissors</h3></figcaption>
               </figure>
             </div>
           </div>
         </section>
       </div>
+      <!--Main section end-->
+      <!--Side bar start-->
       <div class="col-four-lg col-four-md col-twelve-sm col-twelve-xs">
         <section class="sidebar">
           <div id="connect">
             <h2>Connect with Me</h2>
-            <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
-            <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
-            <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+              <div class="row">
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://github.com/jshlfts32"><img src="assests/images/github.svg" class="social" alt="GitHub" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://www.linkedin.com/in/josh-loftis-a6b48a132/"><img src="assests/images/linkedin.svg" class="social" alt="LinkedIn" /></a>
+                </div>
+                <div class="col-four-lg col-four-md col-two-sm col-two-xs">
+                  <a href="https://stackoverflow.com/users/8223408/josh-loftis"><img src="assests/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+                </div>
+            </div>
           </div>
         </section>
       </div>
-    </div>
-  </div>
+      <!-- Side bar end-->
+    </div> <!--end of main content row-->
+  </div> <!--end of main container with content-->
   <footer>
     <div class="container">
       Copyright &copy; 2017 Josh Loftis
